--- a/app/views/shared/_form_errors.html.erb
+++ b/app/views/shared/_form_errors.html.erb
@@ -1,12 +1,26 @@
 <% errors ||= [] %>
 <% if errors.any? %>
-  <div class="alert alert-danger">
-    <div>Hay errores:
+  <div class="alert alert-error mb-4">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="stroke-current shrink-0 h-6 w-6"
+      fill="none"
+      viewBox="0 0 24 24"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+      />
+    </svg>
+    <div>
+      <div class="font-bold">Hay errores:</div>
+      <ul class="mt-2 list-disc list-inside">
+        <% errors.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     </div>
-    <ul>
-      <% errors.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
   </div>
 <% end %>
