--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,12 +1,13 @@
 <%= render "shared/form_errors", errors: @record.errors.full_messages %>
-<%= form_with url: [:new, :transaction], method: :get, html: {data: {controller: "auto-submit"}, class: "grid grid--2-cols"} do |form| %>
-  <fieldset>
+<%= form_with url: [:new, :transaction], method: :get, html: {data: {controller: "auto-submit"}, class: "grid grid-cols-1 md:grid-cols-2 gap-4 mb-6"} do |form| %>
+  <fieldset class="fieldset bg-base-100 border-base-300 rounded-box border p-4">
+    <legend class="fieldset-legend"><%= model_class.human_attribute_name(:sender_id) %></legend>
     <%= form.hidden_field :sender_type, value: "Bank" %>
-    <%= form.label :sender_id, model_class.human_attribute_name(:sender_id) %>
     <%= form.select :sender_id,
                 Bank.all.map { |bank| [bank.display_name, bank.id] },
-                { prompt: true, selected: @sender.try(:id) },
+                { prompt: "Seleccione un banco", selected: @sender.try(:id) },
                 {
+                  class: "select select-bordered w-full",
                   data: {
                     controller: "select",
                     action: "auto-submit#submit",
@@ -15,65 +16,80 @@
                 } %>
   </fieldset>
 
-  <fieldset>
+  <fieldset class="fieldset bg-base-100 border-base-300 rounded-box border p-4">
+    <legend class="fieldset-legend"><%= model_class.human_attribute_name(:receiver_id) %></legend>
     <%= form.hidden_field :receiver_type, value: "Customer" %>
-    <%= form.label :receiver_id, model_class.human_attribute_name(:receiver_id) %>
     <%= form.select :receiver_id,
                 Customer.all.map { |customer| [customer.name, customer.id] },
-                { prompt: true, selected: @receiver.try(:id) },
-                { data: { action: "auto-submit#submit" }, required: true } %>
+                { prompt: "Seleccione un cliente", selected: @receiver.try(:id) },
+                {
+                  class: "select select-bordered w-full",
+                  data: {
+                    action: "auto-submit#submit",
+                  },
+                  required: true,
+                } %>
   </fieldset>
 <% end %>
 
-<%= form_for transaction, local: true, html: {data: {controller: "transaction-form"}} do |form| %>
+<%= form_for transaction, local: true, html: {data: {controller: "transaction-form"}, class: "card bg-base-100 shadow-md"} do |form| %>
+  <div class="card-body">
+    <div>
+      <%= form.hidden_field :sender_type, value: sender.class.name %>
+      <%= form.hidden_field :sender_id, value: sender.try(:id) %>
+      <%= form.hidden_field :receiver_type, value: receiver.class.name %>
+      <%= form.hidden_field :receiver_id, value: receiver.try(:id) %>
+    </div>
 
-  <div>
-    <%= form.hidden_field :sender_type, value: sender.class.name %>
-    <%= form.hidden_field :sender_id, value: sender.try(:id) %>
-    <%= form.hidden_field :receiver_type, value: receiver.class.name %>
-    <%= form.hidden_field :receiver_id, value: receiver.try(:id) %>
-  </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+      <fieldset class="fieldset">
+        <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:amount) %></legend>
+        <%= form.text_field :amount,
+                        value: money_as_value(transaction.send(:amount)),
+                        class: "input input-bordered w-full",
+                        placeholder: "0.00",
+                        data: {
+                          transaction_form_target: "amount",
+                          controller: "number-input",
+                          action: "transaction-form#calculate",
+                        } %>
+      </fieldset>
 
-  <div class="grid">
-    <fieldset>
-      <%= form.label :amount %>
-      <%= form.text_field :amount,
-                      value: money_as_value(transaction.send(:amount)),
+      <fieldset class="fieldset">
+        <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:source_currency) %></legend>
+        <%= form.select :source_currency,
+                    Rails.application.config.available_currencies,
+                    { prompt: "Seleccione moneda" },
+                    {
+                      class: "select select-bordered w-full",
                       data: {
-                        transaction_form_target: "amount",
-                        controller: "number-input",
-                        action: "transaction-form#calculate",
-                      } %>
-    </fieldset>
+                        controller: "select",
+                      },
+                    } %>
+      </fieldset>
 
-    <fieldset>
-      <%= form.label :source_currency %>
-      <%= form.select :source_currency,
-                  Rails.application.config.available_currencies,
-                  { prompt: true },
-                  { data: { controller: "select" }, class: "form-input" } %>
-    </fieldset>
+      <fieldset class="fieldset">
+        <% target_currency = form.object.target_currency || sender.try(:currency) %>
+        <%= form.hidden_field :target_currency, value: target_currency %>
+        <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:target_currency) %></legend>
+        <%= form.select :target_currency,
+                    [target_currency],
+                    { prompt: true, selected: target_currency },
+                    {
+                      class: "select select-bordered w-full",
+                      disabled: true,
+                      data: {
+                        controller: "select",
+                      },
+                    } %>
+      </fieldset>
+    </div>
 
-    <fieldset>
-      <% target_currency = form.object.target_currency || sender.try(:currency) %>
-      <%= form.hidden_field :target_currency, value: target_currency %>
-      <%= form.label :target_currency %>
-      <%= form.select :target_currency,
-                  [target_currency],
-                  { prompt: true, selected: target_currency },
-                  {
-                    disabled: true,
-                    data: {
-                      controller: "select",
-                    },
-                    class: "form-input",
-                  } %>
-    </fieldset>
+    <div class="divider"></div>
+    <%= render "summary", form: %>
 
+    <div class="card-actions justify-end mt-4">
+      <%= turbo_submit(form) %>
+    </div>
   </div>
-
-  <hr>
-  <%= render "summary", form: %>
-
-  <%= turbo_submit(form) %>
 <% end %>
