--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,29 @@
 @import "./flatpickr.min.css";
 @import "tailwindcss";
 @plugin "daisyui";
+
+.table.table--compact {
+    tr {
+        border: none;
+    }
+    th,
+    td {
+        padding: 0.5rem 0;
+    }
+}
+
+.input.input--underline {
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: none;
+    width: 100px;
+    min-width: 100px;
+    height: auto;
+}
+
+.input.input--underline:focus {
+    outline: none;
+}
