--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,11 +1,17 @@
 <%= render "shared/form_errors", errors: @record.errors.full_messages %>
-<%= form_with url: [:new, :transaction], method: :get, html: {data: {controller: "auto-submit"}, class: "grid grid-cols-1 md:grid-cols-2 gap-4 mb-6"} do |form| %>
-  <fieldset class="fieldset bg-base-100 border-base-300 rounded-box border p-4">
-    <legend class="fieldset-legend"><%= model_class.human_attribute_name(:sender_id) %></legend>
-    <%= form.hidden_field :sender_type, value: "Bank" %>
+
+<%= form_for transaction, local: true, html: {data: {controller: "transaction-form"}, class: "card"} do |form| %>
+  <fieldset class="fieldset">
+    <%= form.label :sender_id,
+               model_class.human_attribute_name(:sender_id),
+               class: "fieldset-legend" %>
+
     <%= form.select :sender_id,
-                Bank.all.map { |bank| [bank.display_name, bank.id] },
-                { prompt: "Seleccione un banco", selected: @sender.try(:id) },
+                Bank
+                  .order("LOWER(name) ASC")
+                  .where(currency: current_exchange_rate.target)
+                  .map { |bank| [bank.display_name, bank.id] },
+                { prompt: t("select_bank"), selected: @sender.try(:id) },
                 {
                   class: "select select-bordered w-full",
                   data: {
@@ -16,12 +22,11 @@
                 } %>
   </fieldset>
 
-  <fieldset class="fieldset bg-base-100 border-base-300 rounded-box border p-4">
+  <fieldset class="fieldset">
     <legend class="fieldset-legend"><%= model_class.human_attribute_name(:receiver_id) %></legend>
-    <%= form.hidden_field :receiver_type, value: "Customer" %>
     <%= form.select :receiver_id,
                 Customer.all.map { |customer| [customer.name, customer.id] },
-                { prompt: "Seleccione un cliente", selected: @receiver.try(:id) },
+                { prompt: t("select_customer"), selected: @receiver.try(:id) },
                 {
                   class: "select select-bordered w-full",
                   data: {
@@ -30,66 +35,62 @@
                   required: true,
                 } %>
   </fieldset>
-<% end %>
+  <div>
+    <%= form.hidden_field :sender_type, value: sender.class.name %>
+    <%= form.hidden_field :sender_id, value: sender.try(:id) %>
+    <%= form.hidden_field :receiver_type, value: receiver.class.name %>
+    <%= form.hidden_field :receiver_id, value: receiver.try(:id) %>
+    <%= form.hidden_field :target_currency,
+                      value:
+                        form.object.target_currency || current_exchange_rate.target %>
 
-<%= form_for transaction, local: true, html: {data: {controller: "transaction-form"}, class: "card bg-base-100 shadow-md"} do |form| %>
-  <div class="card-body">
-    <div>
-      <%= form.hidden_field :sender_type, value: sender.class.name %>
-      <%= form.hidden_field :sender_id, value: sender.try(:id) %>
-      <%= form.hidden_field :receiver_type, value: receiver.class.name %>
-      <%= form.hidden_field :receiver_id, value: receiver.try(:id) %>
-    </div>
+    <%= form.hidden_field :source_currency,
+                      value:
+                        form.object.source_currency || current_exchange_rate.source %>
+  </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-      <fieldset class="fieldset">
-        <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:amount) %></legend>
-        <%= form.text_field :amount,
-                        value: money_as_value(transaction.send(:amount)),
-                        class: "input input-bordered w-full",
-                        placeholder: "0.00",
-                        data: {
-                          transaction_form_target: "amount",
-                          controller: "number-input",
-                          action: "transaction-form#calculate",
-                        } %>
-      </fieldset>
-
-      <fieldset class="fieldset">
-        <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:source_currency) %></legend>
-        <%= form.select :source_currency,
-                    Rails.application.config.available_currencies,
-                    { prompt: "Seleccione moneda" },
-                    {
-                      class: "select select-bordered w-full",
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:amount) %></legend>
+    <div class="input w-full">
+      <%= dollar_sign %>
+      <%= form.text_field :amount,
+                      value: money_as_value(transaction.send(:amount)),
+                      class: "grow",
+                      placeholder: "0.00",
                       data: {
-                        controller: "select",
-                      },
-                    } %>
-      </fieldset>
+                        transaction_form_target: "amount",
+                        controller: "number-input",
+                        action: "transaction-form#calculate",
+                      } %>
+      <span class="w-8">
+        <%= render_currency_flag(current_exchange_rate.source) %>
+      </span>
 
-      <fieldset class="fieldset">
-        <% target_currency = form.object.target_currency || sender.try(:currency) %>
-        <%= form.hidden_field :target_currency, value: target_currency %>
-        <legend class="fieldset-legend"><%= form.object.class.human_attribute_name(:target_currency) %></legend>
-        <%= form.select :target_currency,
-                    [target_currency],
-                    { prompt: true, selected: target_currency },
-                    {
-                      class: "select select-bordered w-full",
-                      disabled: true,
+    </div>
+  </fieldset>
+
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= Transaction.human_attribute_name(:total) %></legend>
+    <div class="input w-full">
+      <%= dollar_sign %>
+      <%= form.text_field :total,
+                      value: money_as_value(form.object.total),
+                      class: "grow",
+                      readonly: true,
                       data: {
-                        controller: "select",
-                      },
-                    } %>
-      </fieldset>
-    </div>
+                        transaction_form_target: "total",
+                        controller: "number-input",
+                      } %>
 
-    <div class="divider"></div>
-    <%= render "summary", form: %>
-
-    <div class="card-actions justify-end mt-4">
-      <%= turbo_submit(form) %>
+      <span class="w-8">
+        <%= render_currency_flag(current_exchange_rate.target) %>
+      </span>
     </div>
+  </fieldset>
+
+  <%= render "summary", form: %>
+
+  <div class="card-actions justify-end mt-4">
+    <%= turbo_submit(form) %>
   </div>
 <% end %>
