--- a/app/views/transactions/_list.html.erb
+++ b/app/views/transactions/_list.html.erb
@@ -1,21 +1,25 @@
-<div class="overflow-x-auto">
-  <table class="table table-zebra">
-    <thead>
-      <tr>
-        <th><%= t(:id) %></th>
-        <th><%= Transaction.human_attribute_name(:sender) %></th>
-        <th><%= Transaction.human_attribute_name(:receiver) %></th>
-        <th><%= Transaction.human_attribute_name(:rate) %></th>
-        <th><%= Transaction.human_attribute_name(:cost_rate) %></th>
-        <th><%= Transaction.human_attribute_name(:amount) %></th>
-        <th><%= Transaction.human_attribute_name(:total) %></th>
-        <th><%= Transaction.human_attribute_name(:profit) %></th>
-        <th><%= t("created_at") %></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <%= render transactions %>
-    </tbody>
-  </table>
+<div class="card">
+  <div class="card-body bg-base-100">
+    <div class="overflow-x-auto">
+      <table class="table table-zebra">
+        <thead>
+          <tr>
+            <th><%= t(:id) %></th>
+            <th><%= Transaction.human_attribute_name(:sender) %></th>
+            <th><%= Transaction.human_attribute_name(:receiver) %></th>
+            <th><%= Transaction.human_attribute_name(:rate) %></th>
+            <th><%= Transaction.human_attribute_name(:cost_rate) %></th>
+            <th><%= Transaction.human_attribute_name(:amount) %></th>
+            <th><%= Transaction.human_attribute_name(:total) %></th>
+            <th><%= Transaction.human_attribute_name(:profit) %></th>
+            <th><%= t("created_at") %></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render transactions %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
