--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -8,16 +8,7 @@
 
 <%= content_for :page_actions do %>
   <div class="flex flex-col gap-3">
-    <%= form_with(url: [:transactions], method: :get, html: {class: "", data: {controller: "auto-submit"}}) do |f| %>
-      <%= f.date_field :by_range,
-                   class: "input input-bordered w-full",
-                   data: {
-                     controller: "date-picker",
-                     action: "auto-submit#submit",
-                     date_picker_default_date_value: @date_range.strftime("%d/%m/%Y"),
-                   } %>
-    <% end %>
-
+    <%= render partial: "shared/day_changer" %>
     <div class="flex flex-col md:flex-row md:gap-3 md:justify-end">
       <%= icon_link t("new"), %i[new transaction], icon: "plus", class: "btn btn-primary" %>
 
