feat: Mejorar el inicio de sesión

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,6 +1,13 @@
 @import "./flatpickr.min.css";
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+    themes: light --default;
+}
+
+html,
+body {
+    height: 100%;
+}
 
 .table.table--compact {
     tr {
