--- a/app/views/layouts/authentication.html.erb
+++ b/app/views/layouts/authentication.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="light">
+<html data-theme="light"  style="height: 100%;">
   <head>
     <title><%= content_for(:title) || "Currency Manager" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -18,18 +18,15 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container-fluid auth">
-      <hgroup>
-        <h1><%= yield(:page_title) %></h1>
-        <p><%= yield(:page_description) %></p>
-      </hgroup>
-
-      <%= yield %>
+  <body class="bg-base-200" style="height: 100%;">
+    <main class="flex items-center justify-center w-full" style="height:inherit;">
+        <div class="max-w-md">
+          <%= yield %>
+        </div>
     </main>
   </body>
 </html>
