feat: Mejorar layout para transacciones

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
         </div>
       </div>
       <!-- Sidebar -->
-      <div class="drawer-side">
+      <div class="drawer-side shadow-sm">
         <label
           for="sidebar-toggle"
           class="drawer-overlay"
